2008-09-22  Neal H. Walfield  <neal@gnu.org>

	* src/starling.c (sort_order): New variable.
	(queue_album_cb): Use SORT_ORDER.  If INFO->ARTIST is NULL, only
	search for the album.
	(queue_artist_cb): Use SORT_ORDER.
	(queue_all_cb): New function.
	(library_button_press_event): Get the entry's source.  If TITLE is
	NULL, use SOURCE instead.  If INFO->ALBUM is NULL, don't create
	the queue this album menu item.  If INFO->ARTIST is NULL, don't
	create the queue this artist menu item.  Create a button for
	queueing all tracks matching the current search terms.

2008-09-22  Neal H. Walfield  <neal@gnu.org>

	* src/starling.c (struct _Starling): Add field search_entry.
	(regen_source): New variable.
	(search_text_changed): Move body from here...
	(search_text_regen): ... to this new function.  Don't treat the
	search text as a single string, instead, search for the occurance
	of each word.
	(search_text_changed): If REGEN_SOURCE is not 0, remove the
	timeout.  Set a timeout to call search_text_regen.
	(starling_run): Save the search entry in ST->SEARCH_ENTRY.

2008-09-22  Neal H. Walfield  <neal@gnu.org>

	* src/musicdb.h (music_db_play_queue_clear): New declaration.
	* src/musicdb.c (music_db_play_queue_clear): New function.
	* src/starling.c (clear_queue_cb): New function.
	(starling_run): In the clear all menu item, make the a the active
	key.  Create a new menu item for clearing the queue, connect
	clear_queue_cb to it.

2008-09-22  Neal H. Walfield  <neal@gnu.org>

	* src/player.c (player_get_source): Call g_object_get, not
	g_object_set.

2008-09-22  Neal H. Walfield  <neal@gnu.org>

	* src/musicdb.c (whitelist): Add ".flac" and ".FLAC".

2008-09-22  Neal H. Walfield  <neal@gnu.org>

	* src/musicdb.h (music_db_count): Take additional parameter
	constraint.
	* src/musicdb.c (struct _MusicDB): Remove field count.
	(music_db_init): Don't initialize DB->COUNT.
	(music_db_count): Take additional parameter constraint.  If not